--- a/notify.html
+++ b/notify.html
@@ -21,7 +21,7 @@
 <body>
   <main>
     <nav>
-      <h4>Notifications <span>3</span> </h4>
+      <h4>Notification<span class="plural">s</span><span class="count">7</span> </h4>
 
       <p onclick="clicked();">Mark all as read</p>
     </nav>
@@ -33,8 +33,8 @@
         <div class="notification-box-2">
           <p>
             <span> Mark Webber</span> reacted to your recent post
-            <like style="font-weight: bold;"> My first tournament
-              today!</like><i class="fa-sharp fa-solid fa-circle"
+            <span class="title" style="font-weight: bold;"> My first tournament
+              today!</span><i class="fa-sharp fa-solid fa-circle"
               style="font-size: 7px;position:relative; top: -2px; left:10px; color: red;"></i>
             <br>1m ago</br> 
           </p>
