--- a/notify.html
+++ b/notify.html
@@ -26,7 +26,7 @@
       <p onclick="clicked();">Mark all as read</p>
     </nav>
     <div class="notification-area">
-      <div class="notification-box-content" onclick="click();">
+      <div class="notification-box-content">
         <div class="notification-box">
           <img src="./assets/images/avatar-mark-webber.webp" alt="Loading">
         </div>
@@ -35,8 +35,8 @@
             <span> Mark Webber</span> reacted to your recent post
             <span class="title" style="font-weight: bold;"> My first tournament
               today!</span><i class="fa-sharp fa-solid fa-circle"
-              style="font-size: 7px;position:relative; top: -2px; left:10px; color: red;"></i>
-            <br>1m ago</br> 
+              style="font-size: 7px;position:relative; top: -2px; left:10px; color: red;" id="dot"></i>
+            <br>1m ago</br>
           </p>
         </div>
       </div>
@@ -47,7 +47,7 @@
         <div class="notification-box-2">
           <p>
             <span>Angela Gray</span> followed you<i class="fa-sharp fa-solid fa-circle"
-              style="font-size: 7px;position:relative; top: -2px; left:10px; color: red;"></i>
+              style="font-size: 7px;position:relative; top: -2px; left:10px; color: red;"  id="dot"></i>
             <br>5m ago</br>
           </p>
         </div>
@@ -61,7 +61,7 @@
             <span>Jacob Thompson</span> has joined your group <liken
               style="color: hsl(224, 63%, 24%); font-weight: bold;">Chess Club </liken><i
               class="fa-sharp fa-solid fa-circle"
-              style="font-size: 7px;position:relative; top: -2px; left:10px; color: red;"></i>
+              style="font-size: 7px;position:relative; top: -2px; left:10px; color: red;" id="dot"></i>
             <br>1 day ago</br>
           </p>
         </div>
@@ -73,7 +73,7 @@
         <div class="notification-box-2">
           <p>
             <span>Rizky Hasanuddin</span> sent you a private message<i class="fa-sharp fa-solid fa-circle"
-              style="font-size: 7px;position:relative; top: -2px; left:10px; color: red;"></i>
+              style="font-size: 7px;position:relative; top: -2px; left:10px; color: red;"  id="dot"></i>
             <br>5 days ago</br>
           </p>
         </div>
@@ -88,8 +88,8 @@
         </div>
         <div class="notification-box-2">
           <p>
-            <span>Kimberly Smith</span> commented on your picture<i class="fa-sharp fa-solid fa-circle"
-              style="font-size: 7px;position:relative; top: -2px; left:10px; color: red;"></i>
+            <span>Kimberly Smith</span> commented on your picture<i class="fa-sharp fa-solid fa-circle "
+              style="font-size: 7px;position:relative; top: -2px; left:10px; color: red;" id="dot"></i>
             <br>1 week ago</br>
           </p>
         </div>
@@ -104,7 +104,7 @@
           <p>
             <span>Nathan Peterson</span> reacted to your recent post <like style="font-weight: bold;">5 end-game
               strategies to increase your win rate</like><i class="fa-sharp fa-solid fa-circle"
-              style="font-size: 7px;position:relative; top: -2px; left:10px; color: red;"></i>
+              style="font-size: 7px;position:relative; top: -2px; left:10px; color: red;"  id="dot"></i>
             <br>2 weeks ago</br>
           </p>
         </div>
@@ -117,7 +117,7 @@
           <p>
             <span>Anna Kim</span> left the group <liken style="color: hsl(224, 63%, 24%); font-weight: bold;">Chess Club
             </liken><i class="fa-sharp fa-solid fa-circle"
-              style="font-size: 7px;position:relative; top: -2px; left:10px; color: red;"></i>
+              style="font-size: 7px;position:relative; top: -2px; left:10px; color: red;"  id="dot"></i>
             <br>2 weeks ago</br>
           </p>
         </div>
