--- a/notify.html
+++ b/notify.html
@@ -10,7 +10,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@500;800&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="notify.css">
+  <link rel="stylesheet" href="/notify.css">
 
   <script src="https://kit.fontawesome.com/c09cf71ec9.js" crossorigin="anonymous"></script>
 
@@ -21,12 +21,12 @@
 <body>
   <main>
     <nav>
-      <h4>Notifications<span class="count">7</span> </h4>
+      <h4>Notifications<span id="count"></span> </h4>
 
       <p onclick="clicked();">Mark all as read</p>
     </nav>
     <div class="notification-area">
-      <div id="notification-box-content" class="notification-box-content-bg" onclick="read();">
+      <div id="notification-box-content" class="notification-box-content-bg">
         <div class="notification-box">
           <img src="./assets/images/avatar-mark-webber.webp" alt="Loading">
         </div>
